fix(Column): fix rowSpan cell layer covering fixed columns (#331)

--- a/docs/less/index.less
+++ b/docs/less/index.less
@@ -1,10 +1,9 @@
 @import '~react-code-view/lib/less/index.less';
 @import '../../src/less/index.less';
-@import '~rsuite/styles/index.less';
 
 .btn-toolbar {
   padding: 10px 0;
 }
-.icon-code:before{
+.icon-code:before {
   content: '';
 }
